{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 16,
  "lineage": "ec39220d-bd4a-95ac-d3ff-960214424c98",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:443845329055:vpc/vpc-03d189b799ce830a0",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-025a84ecc76a0a66e",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-00f6ffab968f3c4d3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03d189b799ce830a0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0046627d258e026e5",
            "owner_id": "443845329055",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01971107641e9b67d",
            "arn": "arn:aws:ec2:ap-south-1:443845329055:instance/i-0a2db521e9266e83e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "learnhub-lms-ec2-profile",
            "id": "i-0a2db521e9266e83e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06e24a9305d28c393"
              }
            ],
            "primary_network_interface_id": "eni-06e24a9305d28c393",
            "private_dns": "ip-172-31-27-54.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.27.54",
            "public_dns": "ec2-13-202-91-237.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.91.237",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fadbf2900332d09d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "learnhub-lms-backend-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cf96a11abbfff815",
            "tags": {
              "Name": "learnhub-lms-backend"
            },
            "tags_all": {
              "Name": "learnhub-lms-backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-032c7acc231fcf181"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "443845329055",
            "id": "i-0a2db521e9266e83e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.backend_sg",
            "data.aws_ami.amazon_linux",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:443845329055:security-group/sg-032c7acc231fcf181",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-032c7acc231fcf181",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow backend traffic from CloudFront",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-9aa247f3"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "learnhub-lms-backend-sg",
            "name_prefix": "",
            "owner_id": "443845329055",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03d189b799ce830a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "443845329055",
            "id": "sg-032c7acc231fcf181",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:443845329055:security-group/sg-0b3171ebf04088337",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3171ebf04088337",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow PostgreSQL from EC2 backend",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-032c7acc231fcf181"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "learnhub-lms-db-sg",
            "name_prefix": "",
            "owner_id": "443845329055",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03d189b799ce830a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "443845329055",
            "id": "sg-0b3171ebf04088337",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.backend_sg",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}